@@ -14,6 +14,10 @@ Enhancements:
  * Issue #92: ASCII transfers are now 200% faster on those systems using
    "\r\n" as line separator (typically Windows).
 
+ * Issue #93: A bigger buffer size for send() and recv() has been set resulting
+   in a considerable speed improvement for both incoming and outgoing data
+   transfers.
+
 Bugfixes:
 
  * Issue #78: the idle timeout of passive data connections gets stopped in case
